GNOME Bugzilla – Bug 730806
Incorrect handling of transitions in ges-launch
Last modified: 2014-09-23 09:16:01 UTC
ges-launch gets stuck in an infinite loop when performing this command : ges-launch-1.0 src.mp4 0 5 +transition crossfade 2 src.mp4 6 5 -o out.mp4
Created attachment 278005 [details] [review] tools: Fix transition handling in ges-launch
Created attachment 278016 [details] [review] tools: Fix transition handling in ges-launch
Review of attachment 278016 [details] [review]: OK
Attachment 278016 [details] pushed as a3e87f2 - tools: Fix transition handling in ges-launch