tools: Fix transition handling in ges-launch

https://bugzilla.gnome.org/show_bug.cgi?id=730806